<?xml version="1.0"?>
<!--
  Copyright 2016 The Cartographer Authors

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<package format="2">
  <name>ceres_solver</name>
  <version>1.11.0</version>
  <description>ceres_solver</description>
  <maintainer email="google-cartographer@googlegroups.com">
    The Cartographer Authors
  </maintainer>
  <license>New BSD</license>
  <url type="website">http://ceres-solver.org/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>atlas</depend>
  <depend>libblas-dev</depend>
  <depend>eigen</depend>
  <depend>gfortran</depend>
  <depend>libgflags-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>suitesparse</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
